compiler/tests/errortests/keyword-as-identifier.txt
FILENAME:2:9: error: expected token 'IDENTIFIER' but found KEYWORD!
    let type = 0;
        ^---
